--- a/client/.env.sample
+++ b/client/.env.sample
@@ -1,7 +1,2 @@
-# .env.sample - Sample Environment Variables for Client (Vite)
-
-# Server API URL (call it in React with import.meta.env.VITE_API_URL)
-VITE_API_URL=http://localhost:3310
-
-# Other Environment Variables (if needed)
-# VITE_OTHER_VARIABLE=value
+VITE_CLIENT_API_KEY_FOOT="clé1"
+VITE_CLIENT_API_KEY_YOUTUBE="clé2"
